<resources>
    <string name="app_name">PrivateNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_Title">Enter Title</string>
    <string name="prompt_Description">Enter Description</string>
    <string name="add">Add</string>
    <string name="click_on_the_image_next_to_update_the_date">Click on the image next to Update the date</string>
    <string name="Edit">Edit</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="textview">Title</string>
    <string name="created_on">Created On :</string>
    <string name="createdOn">Created On:</string>
    <string name="create_notes">Create Notes</string>


    <!--    <string-array name="rainbow">-->
<!--        <item>"#FF007F"</item>-->
<!--&lt;!&ndash;        <item>@color/red</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/orange</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/yellow</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/chartreuse</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/green</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/spring_green</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/cyan</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/azure</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/blue</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/violet</item>&ndash;&gt;-->
<!--&lt;!&ndash;        <item>@color/magenta</item>&ndash;&gt;-->
<!--    </string-array>-->
</resources>