<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CreateNotesFragment">

    <!--notesTitleTv-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DescriptionBox"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#EDE9E9"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:circularflow_defaultRadius="10dp"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNotesTitleTv">

        <EditText
            android:id="@+id/notesDescriptionTv"
            android:layout_width="372dp"
            android:layout_height="76dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/prompt_Description"
            android:inputType="textMultiLine"
            android:paddingStart="5dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/UpdatedDateTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:text="@string/click_on_the_image_next_to_update_the_date"
        android:textColor="#F1F1F1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/datePickerIv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/datePickerIv"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginEnd="32dp"
        android:background="#F4EFEF"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/UpdatedDateTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/UpdatedDateTv" />

    <Button
        android:id="@+id/notesEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/gradient"
        android:text="@string/Edit"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editNotesTitleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="monospace"
        android:text="@string/textview"
        android:textColor="#E8DFDF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/DescriptionBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="92dp"
        android:fontFamily="monospace"
        android:text="@string/created_on"
        android:textColor="#F1E7E7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/UpdatedDateTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionBox" />

    <TextView
        android:id="@+id/createdOnTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="monospace"
        android:text="@string/createdOn"
        android:textColor="#EFE6E6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/createdNotesAnimation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editNotesTitleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/list_animation" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:fontFamily="monospace"
        android:text="@string/edit_notes"
        android:textColor="#3E3A3A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>